# drf_auth_base_app

./: README.md  pyproject.toml
auth_app/apps/accounts/: urls.py
auth_app/auth_app/: asgi.py  settings.py  urls.py  wsgi.py
